# bofire-candidates-api

./: .gitignore  README.md  pyproject.toml  requirements.txt  webserver.ipynb  webserver_proposal.ipynb
.github/workflows/: test.yaml
app/: app.py
app/models/: candidates.py  proposals.py
app/routers/: candidates.py  proposals.py  versions.py
app/routes/: candidates.py  proposals.py
bofire_candidates_api/: data_models.py  generate.py  worker.py
bofire_candidates_api/routers/: candidates.py  proposals.py
tests/: conftest.py  test_candidates.py  test_models.py  test_proposals.py  test_versions.py  test_worker.py
worker/: __main__.py  api_data_models.py  client.py  worker.py
