[build-system]
requires = ["setuptools", "setuptools_scm[toml]", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bofire-candidates-api"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bofire>=0.0.15",
]

[project.optional-dependencies]
optimization = [
    "bofire[optimization]>=0.0.15",
    "uvicorn",
    "fastapi",
    "pytest",
    "requests",
    "tinydb",
]

[tool.setuptools]
packages = ["bofire_candidates_api"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.1"
